--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ default_language = "en"
 theme = "even"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+compile_sass = false
 
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
