--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
+    "katex": "^0.16.21",
     "next": "15.1.4",
     "next-contentlayer2": "0.5.4",
     "next-themes": "^0.3.0",
@@ -34,7 +35,7 @@
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
-    "rehype-katex": "^7.0.0",
+    "rehype-katex": "^7.0.1",
     "rehype-katex-notranslate": "^1.1.4",
     "rehype-preset-minify": "7.0.0",
     "rehype-prism-plus": "^2.0.0",
