--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# SUPABASE
+SUPABASE_PROJECT_ID=
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_DATABASE_PASSWORD=
+
 # visit https://giscus.app to get your Giscus ids
 NEXT_PUBLIC_GISCUS_REPO=
 NEXT_PUBLIC_GISCUS_REPOSITORY_ID=
