--- a/package.json
+++ b/package.json
@@ -3,21 +3,32 @@
   "version": "2.3.0",
   "private": true,
   "scripts": {
-    "start": "next dev",
+    "start": "next dev --turbopack",
     "dev": "cross-env INIT_CWD=$PWD next dev",
     "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky"
+    "format": "prettier --write .",
+    "prepare": "husky",
+    "generate-types": "dotenv -e .env.local -- pnpm dlx supabase gen types --lang=typescript --project-id \"$SUPABASE_PROJECT_ID\" --schema public > src/types/database.ts",
+    "generate-types:local": "pnpm dlx supabase gen types --lang=typescript --local > src/types/database.ts"
   },
   "dependencies": {
     "@headlessui/react": "2.2.1",
+    "@hookform/resolvers": "5.0.1",
     "@next/bundle-analyzer": "15.2.4",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-slot": "1.1.2",
+    "@supabase/ssr": "0.5.2",
+    "@supabase/supabase-js": "2.49.1",
+    "@t3-oss/env-nextjs": "0.12.0",
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/postcss": "4.1.3",
     "@tailwindcss/typography": "0.5.16",
     "body-scroll-lock": "4.0.0-beta.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "contentlayer2": "0.5.5",
     "esbuild": "0.25.2",
     "github-slugger": "2.0.0",
@@ -25,6 +36,7 @@
     "hast-util-from-html-isomorphic": "2.0.0",
     "image-size": "2.0.2",
     "katex": "0.16.21",
+    "lucide-react": "0.487.0",
     "next": "15.2.4",
     "next-contentlayer2": "0.5.5",
     "next-themes": "0.4.6",
@@ -32,6 +44,7 @@
     "postcss": "8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "7.55.0",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "7.1.0",
     "rehype-citation": "2.3.1",
@@ -44,8 +57,12 @@
     "remark-gfm": "4.0.1",
     "remark-github-blockquote-alert": "1.3.0",
     "remark-math": "6.0.0",
+    "sonner": "2.0.3",
+    "tailwind-merge": "3.1.0",
     "tailwindcss": "4.1.3",
-    "unist-util-visit": "5.0.0"
+    "tw-animate-css": "1.2.5",
+    "unist-util-visit": "5.0.0",
+    "zod": "3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
@@ -56,6 +73,7 @@
     "@typescript-eslint/eslint-plugin": "8.29.0",
     "@typescript-eslint/parser": "8.29.0",
     "cross-env": "7.0.3",
+    "dotenv-cli": "8.0.0",
     "eslint": "9.24.0",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "10.1.1",
